# rshare

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build-debug.sh  build.sh  install.sh  release.sh
.github/workflows/: ci.yml
assets/: rshare.desktop
crates/rshare-app/: Cargo.toml  build.rs
crates/rshare-app/src/: api.rs  desktop.rs  lib.rs  models.rs  store.rs
crates/rshare-app/ui/: app.slint  file_list.slint  settings.slint  style.slint  upload.slint
crates/rshare-cli/: Cargo.toml
crates/rshare-cli/src/: commands.rs  main.rs
crates/rshare-common/: Cargo.toml
crates/rshare-common/src/: lib.rs
crates/rshare-gui/: Cargo.toml
crates/rshare-gui/src/: app.rs  main.rs
crates/rshare-gui/src/views/: download.rs  file_list.rs  mod.rs  upload.rs
crates/rshare-server/: Cargo.toml
crates/rshare-server/src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  storage.rs
