[workspace]
members = [
    "crates/rshare-common",
    "crates/rshare-server",
    "crates/rshare-cli",
    "crates/rshare-app",
]
resolver = "3"

[workspace.package]
version = "0.2.2"
edition = "2024"

[workspace.dependencies]
rshare-common = { path = "crates/rshare-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "json"] }
axum = { version = "0.8", features = ["multipart"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
mime_guess = "2"
indicatif = "0.17"
slint = "1"
slint-build = "1"
rfd = { version = "0.15" }
dirs = "6"
