[package]
name = "rshare-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "rshare-app"
path = "src/desktop.rs"

[features]
default = []
android = ["slint/backend-android-activity-06"]

[dependencies]
rshare-common = { path = "../rshare-common" }
slint = "1"
reqwest = { version = "0.12", features = ["multipart", "json"] }
rfd = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
slint-build = "1"
