[package]
name = "rshare-app"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "rshare-app"
path = "src/desktop.rs"

[features]
default = ["desktop"]
desktop = ["dep:rfd"]
android = ["slint/backend-android-activity-06"]

[dependencies]
rshare-common.workspace = true
slint.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
rfd = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true

[build-dependencies]
slint-build.workspace = true

[package.metadata.android]
package = "com.rshare.app"
label = "rshare"
target_sdk_version = 34
min_sdk_version = 26
compile_sdk_version = 34

[package.metadata.android.application]
theme = "@android:style/Theme.DeviceDefault.NoActionBar"
use_cleartext_traffic = true

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[package.metadata.android.signing.release]
path = "../../debug.keystore"
keystore_password = "android"
key_alias = "debug"
key_password = "android"
