[package]
name = "rshare-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rshare-common = { path = "../rshare-common" }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
