[package]
name = "rshare-cli"
version.workspace = true
edition.workspace = true

[dependencies]
rshare-common.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
tokio-util.workspace = true
