[package]
name = "rshare-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
rshare-common = { path = "../rshare-common" }
eframe = "0.31"
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
poll-promise = { version = "0.3", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
