[package]
name = "rshare-server"
version.workspace = true
edition.workspace = true

[dependencies]
rshare-common.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
sha2.workspace = true
futures.workspace = true
mime_guess.workspace = true
